fix(api): fix for the dates backend api to get correct dates for weeks in december, also some small fixes for css on mobile nav bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,8 @@
     scrollbar-width: none; /* Firefox */
   }
 }
+
+body {
+  font-family: "Inter", sans-serif;
+  overflow-x: hidden;
+}
